--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="flex justify-between items-center backdrop-blur-md bg-white/10 rounded-2xl p-0 shadow-lg">
                 <div class="flex items-center space-x-3">
                     <a href="index.html" aria-label="Go to homepage">
-                        <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+                        <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto max-w-full" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
                     </a>
                 </div>
                 <div class="hidden md:flex space-x-10">
@@ -141,10 +141,10 @@
     <div class="container mx-auto px-6 lg:px-16 py-5 max-w-7xl">
         <div class="flex flex-col md:flex-row items-center justify-between gap-12">
             <div class="md:w-1/2 mb-8 md:mb-0 space-y-8">
-                <h1 class="text-6xl font-bold text-white leading-tight">
+                <h1 class="text-4xl md:text-6xl font-bold text-white leading-tight">
                     Leadbryte Solutions<br>
                 </h1>
-                <p class="text-gray-200 text-lg max-w-xl">
+                <p class="text-gray-200 text-base md:text-lg max-w-xl">
                     Let LeadBryteSolutions help your businesses scale operations,
                     improve quality and increase efficiency through tech solutions.
                 </p>
@@ -155,10 +155,10 @@
             </div>
             <div class="hidden md:block md:w-1/2 relative">
                 <div class="slider-container relative w-full max-w-2xl mx-auto">
-                    <div class="slider-wrapper">
-                        <img src="image/Abraquah.png" alt="Innovation" class="slider-image" loading="lazy">
-                        <img src="image/Steward.png" alt="Excellence" class="slider-image" loading="lazy">
-                        <img src="caleb.png" alt="Technology" class="slider-image" loading="lazy">
+                    <div class="slider-wrapper w-full max-w-full">
+                        <img src="image/Abraquah.png" alt="Innovation" class="slider-image w-full max-w-full" loading="lazy">
+                        <img src="image/Steward.png" alt="Excellence" class="slider-image w-full max-w-full" loading="lazy">
+                        <img src="caleb.png" alt="Technology" class="slider-image w-full max-w-full" loading="lazy">
                     </div>
                     <button class="prev-btn slider-btn absolute left-4 top-1/2 transform -translate-y-1/2 text-white rounded-full w-10 h-10 flex items-center justify-center">
                         <i class="fas fa-chevron-left"></i>
