--- a/admin.html
+++ b/admin.html
@@ -26,11 +26,11 @@
 <body class="bg-gradient-to-b from-blue-700 to-blue-900 min-h-screen font-poppins text-white" style="background: linear-gradient(to bottom, #0066cc, #003366) !important;">
   <!-- Admin Navigation -->
   <nav class="p-6 lg:px-16 sticky top-0 z-50">
-    <div class="container mx-auto px-6 lg:px-16 max-w-7xl">
+    <div class="container mx-auto px-4 sm:px-6 md:px-8 lg:px-16 max-w-7xl">
       <div class="flex justify-between items-center backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg">
         <div class="flex items-center space-x-3">
           <a href="index.html" aria-label="Go to homepage">
-            <img src="Company Logo.png" alt="LeadBryte Logo" class="h-14 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+            <img src="Company Logo.png" alt="LeadBryte Logo" class="h-14 w-auto max-w-full" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
           </a>
           <div>
             <p class="text-xs uppercase text-gray-200 tracking-wide">LeadBryte Solutions</p>
@@ -48,17 +48,17 @@
   <main class="container mx-auto px-6 lg:px-16 max-w-7xl py-10 space-y-10">
     <!-- High-level stats -->
     <section class="grid grid-cols-1 md:grid-cols-3 gap-6">
-      <div class="backdrop-blur-md bg-white/10 rounded-2xl p-6 shadow-lg">
+      <div class="backdrop-blur-md bg-white/10 rounded-2xl p-6 shadow-lg w-full">
         <p class="text-sm text-gray-200 mb-1">Project Requests</p>
         <p class="text-3xl font-bold" id="stat-project-requests">0</p>
         <p class="text-xs text-gray-300 mt-2" id="stat-project-requests-sub">Loading...</p>
       </div>
-      <div class="backdrop-blur-md bg-white/10 rounded-2xl p-6 shadow-lg">
+      <div class="backdrop-blur-md bg-white/10 rounded-2xl p-6 shadow-lg w-full">
         <p class="text-sm text-gray-200 mb-1">Newsletter Subscribers</p>
         <p class="text-3xl font-bold" id="stat-newsletter">0</p>
         <p class="text-xs text-gray-300 mt-2" id="stat-newsletter-sub">Loading...</p>
       </div>
-      <div class="backdrop-blur-md bg-white/10 rounded-2xl p-6 shadow-lg">
+      <div class="backdrop-blur-md bg-white/10 rounded-2xl p-6 shadow-lg w-full">
         <p class="text-sm text-gray-200 mb-1">Contact Messages</p>
         <p class="text-3xl font-bold" id="stat-contact">0</p>
         <p class="text-xs text-gray-300 mt-2" id="stat-contact-sub">Loading...</p>
@@ -71,8 +71,8 @@
         <h2 class="text-2xl font-semibold">Project Requests</h2>
         <span class="text-xs text-gray-200" id="projects-count-label">Loading...</span>
       </div>
-      <div class="overflow-x-auto">
-        <table class="min-w-full text-sm">
+      <div class="overflow-x-auto w-full">
+        <table class="min-w-full text-sm w-full">
           <thead class="bg-white/10">
             <tr>
               <th class="px-4 py-2 text-left">Date</th>
@@ -96,8 +96,8 @@
         <h2 class="text-2xl font-semibold">Contact Messages</h2>
         <span class="text-xs text-gray-200" id="contacts-count-label">Loading...</span>
       </div>
-      <div class="overflow-x-auto">
-        <table class="min-w-full text-sm">
+      <div class="overflow-x-auto w-full">
+        <table class="min-w-full text-sm w-full">
           <thead class="bg-white/10">
             <tr>
               <th class="px-4 py-2 text-left">Date</th>
@@ -120,8 +120,8 @@
         <h2 class="text-2xl font-semibold">Newsletter Subscribers</h2>
         <span class="text-xs text-gray-200" id="newsletter-count-label">Loading...</span>
       </div>
-      <div class="overflow-x-auto">
-        <table class="min-w-full text-sm">
+      <div class="overflow-x-auto w-full">
+        <table class="min-w-full text-sm w-full">
           <thead class="bg-white/10">
             <tr>
               <th class="px-4 py-2 text-left">Date</th>
