--- a/project.html
+++ b/project.html
@@ -138,12 +138,12 @@
 <body class="bg-gradient-to-b from-blue-700 to-blue-900 min-h-screen font-poppins flex flex-col" style="background: linear-gradient(to bottom, #0066cc, #003366) !important;">
     <!-- Navigation -->
     <nav class="p-6 lg:px-16 sticky top-0 z-50" aria-label="Main Navigation">
-        <div class="container mx-auto px-6 lg:px-16 max-w-7xl">
+        <div class="container mx-auto px-4 sm:px-6 md:px-8 lg:px-16 max-w-7xl">
             <div class="flex justify-between items-center backdrop-blur-md bg-white/10 rounded-2xl p-0 shadow-lg">
                 <div class="flex items-center space-x-3">
                     <!-- Company Logo -->
                     <a href="index.html" aria-label="Go to homepage">
-                        <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
+                        <img src="Company Logo.png" alt="LeadBryte Logo" class="h-20 w-auto max-w-full" onerror="this.onerror=null;this.src='https://placehold.co/80x80?text=Logo';" loading="eager">
                     </a>
                 </div>
                 <!-- Update the navigation links -->
@@ -188,7 +188,7 @@
     <!-- Main Content - Project Form -->
     <main class="flex-grow flex items-center justify-center p-4">
         <div class="backdrop-blur-md bg-white/20 p-8 rounded-lg shadow-lg w-full max-w-3xl transform transition-all duration-300 hover:scale-105 my-8">
-            <h2 class="text-3xl font-extrabold text-white mb-6 text-center">Project Request Form</h2>
+            <h2 class="text-2xl md:text-3xl font-extrabold text-white mb-6 text-center">Project Request Form</h2>
 
             <form id="projectForm" class="space-y-6">
                 <!-- Message div for form feedback -->
