--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </a>
                 </div>
                 <div class="hidden md:flex space-x-10">
-                    <a href="#what-we-do" class="text-white hover:text-teal-200 transition-colors font-bold p-4" aria-label="What we do">What we do</a>
+                    <a href="#what-we-do" class="text-white hover:text-teal-200 transition-colors font-bold p-4" aria-label="What We Do">What We Do</a>
                     <a href="#our-team" class="text-white hover:text-teal-200 transition-colors font-bold p-4" aria-label="Our Team">Our Team</a>
                     <a href="#how-we-work" class="text-white hover:text-teal-200 transition-colors font-bold p-4" aria-label="How we work">How we work</a>
                     <a href="#portfolio" class="text-white hover:text-teal-200 transition-colors font-bold p-4" aria-label="Portfolio">Portfolio</a>
@@ -207,7 +207,7 @@
     <div id="our-team" class="container mx-auto px-6 lg:px-16 py-16 max-w-7xl">
         <div class="flex flex-col lg:flex-row gap-12">
             <div class="lg:w-1/2 space-y-6">
-                <h2 class="text-5xl font-bold text-white leading-tight">Our leading, strong & creative team</h2>
+                <h2 class="text-5xl font-bold text-white leading-tight">Our Team</h2>
                 <p class="text-gray-200 text-lg">At Leadbryte, we believe that great things are never achieved alone they're
                     built by a team of passionate individuals united by a shared vision. Our diverse team of innovators, problem-solvers,
                     and industry experts is the driving force behind every success story we create.</p>
