--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <!-- Portfolio Item 3 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
                 <div class="h-48 overflow-hidden rounded-lg mb-4">
-                    <img src="SOFTWARE DEVELOPMENT.jpg" alt="Project 3" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+3';" loading="lazy">
+                    <img src="image/software development.png" alt="Project 3" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+3';" loading="lazy">
                 </div>
                 <h3 class="text-xl font-bold text-white mb-2">Software Development</h3>
                 <p class="text-gray-200">Custom ERP solution development for manufacturing company.</p>
@@ -355,7 +355,7 @@
             <!-- Portfolio Item 4 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
                 <div class="h-48 overflow-hidden rounded-lg mb-4">
-                    <img src="server room.jpg" alt="Project 4" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+4';" loading="lazy">
+                    <img src="image/date center setup.png" alt="Project 4" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+4';" loading="lazy">
                 </div>
                 <h3 class="text-xl font-bold text-white mb-2">Data Center Setup</h3>
                 <p class="text-gray-200">Modern data center design and implementation for financial institution.</p>
@@ -373,7 +373,7 @@
             <!-- Portfolio Item 6 -->
             <div class="backdrop-blur-md bg-white/10 rounded-2xl p-4 shadow-lg group hover:scale-105 transition-transform duration-300">
                 <div class="h-48 overflow-hidden rounded-lg mb-4">
-                    <img src="IT CONSULT.jpg" alt="Project 6" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+6';" loading="lazy">
+                    <img src="image/it consulting.png" alt="Project 6" class="w-full h-full object-cover" onerror="this.onerror=null;this.src='https://placehold.co/300x200?text=Project+6';" loading="lazy">
                 </div>
                 <h3 class="text-xl font-bold text-white mb-2">IT Consulting</h3>
                 <p class="text-gray-200">Strategic IT consulting and digital transformation for healthcare provider.</p>
