--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
     </style>
 </head>
 <body class="bg-gradient-to-b from-blue-700 to-blue-900 min-h-screen font-poppins" style="background: linear-gradient(to bottom, #0066cc, #003366) !important;">
+    <!-- Toast Notification -->
+    <div id="toast" class="fixed top-8 left-1/2 transform -translate-x-1/2 z-50 px-6 py-4 rounded-lg shadow-lg text-white text-base font-semibold transition-all duration-500 opacity-0 pointer-events-none bg-green-600"></div>
     <!-- Navigation -->
     <nav class="p-6 lg:px-16 sticky top-0 z-50">
         <div class="container mx-auto px-6 lg:px-16 max-w-7xl">
@@ -661,6 +663,7 @@
                         
                         newsletterMessageDiv.textContent = result.message;
                         newsletterMessageDiv.classList.remove('hidden');
+                        showToast(result.message, result.success ? 'success' : 'error');
                         
                         if (result.success) {
                             newsletterMessageDiv.classList.add('bg-green-100', 'text-green-800');
@@ -689,6 +692,7 @@
             } else {
                 newsletterMessageDiv.textContent = 'Please enter a valid email address.';
                 newsletterMessageDiv.classList.remove('hidden');
+                showToast('Please enter a valid email address.', 'error');
                 newsletterMessageDiv.classList.add('bg-red-100', 'text-red-800');
             }
         });
@@ -761,6 +765,17 @@
         });
       }
       window.closeMobileMenu = closeMobileMenu; // for inline onclick
-    </script>
+    // Toast notification logic
+function showToast(message, type) {
+  const toast = document.getElementById('toast');
+  toast.textContent = message;
+  toast.className = 'fixed top-8 left-1/2 transform -translate-x-1/2 z-50 px-6 py-4 rounded-lg shadow-lg text-white text-base font-semibold transition-all duration-500 pointer-events-auto ' + (type === 'success' ? 'bg-green-600' : 'bg-red-600');
+  toast.style.opacity = '1';
+  setTimeout(() => {
+    toast.style.opacity = '0';
+    toast.classList.add('pointer-events-none');
+  }, 3500);
+}
+</script>
 </body>
 </html>
